# recipe-engine-service/api/domain/recipeEngine.js
@@ -3,7 +3,7 @@ var Q = require('q');
 var _ = require('lodash'),
     dbconfig = require('../../config/db'),
     dbUtils = require('../helpers/db/db'),
-    EnginerecipeMetadata = require('../helpers/transformer/enginerecipeMetadata'),
+    EnginerecipeMetadata = require('../helpers/transformer/recipeEngineMetadata'),
     recipeClient = require('../helpers/client/recipeclient'),
     Logger = require('bunyan');
 var request = require("request");
@@ -48,7 +48,7 @@ enginerecipe.prototype.processRecipe=(traceId,userId, cb) => {
     // enginerecipeMetadata.expringDate=new Date(new Date().getTime()+(180*24*60*60*1000));
     // enginerecipeMetadata.listedDate=new Date();
     enginerecipeMetadata.createddBy=userId;
-    enginerecipeMetadata.updatedBy=userId;
+    enginerecipeMetadata.updatedBy="Recipe Engine";
     //enginerecipeMetadata.carrierCode=carrierCode;
    // enginerecipeMetadata.airlineId=airlineId;
     var response = {
@@ -57,31 +57,37 @@ enginerecipe.prototype.processRecipe=(traceId,userId, cb) => {
         errorCode: "code1"
     }
   var measurementTypes=['kg','g','ml']
-    recipeClient.getRecipe(enginerecipeMetadata.recipe_id,"test",function(err,data){
+    recipeClient.getRecipe(enginerecipeMetadata.recipe_id,"test",function(err,res){
         if(!err){
-            var ingradients=data.ingradients;
-            var samplePerCount=data.perCount;
+            var ingradients=res.data.ingradients;
+            var samplePerCount=res.data.perCount;
             var orderPerCount=enginerecipeMetadata.paxCount;
             ingradients.forEach(element => {
-                if(element.measurement_type['kg']){
-                    
+                if(element.measurement_value){
+                var oldIngredientAmount = element.measurement_value;
+                var newIngredientAmount = oldIngredientAmount * orderPerCount / samplePerCount;
+                element.measurement_value=newIngredientAmount;
                 }
             });
+            enginerecipeMetadata.ingradients=ingradients;
+            rdb.table("cfp_recipe_engine_tb").insert(enginerecipeMetadata).run().then(function (enginerecipeData) {
+                console.log(JSON.stringify(enginerecipeData.generated_keys[0]));
+                    var resObj = { "status": "200", "data": enginerecipeMetadata }
+                           cb(null,resObj);
+                       }).catch(function (err) {
+                           console.log("first err catch")
+                           log.error("TraceId : %s, Error : %s", traceId, JSON.stringify(err));
+                           
+                           cb(response);
+                       });  
+        }else{
+            cb(response);
         }
 
 
 
     })
-     rdb.table("cfp_enginerecipe_tb").insert(enginerecipeMetadata).run().then(function (enginerecipeData) {
-         console.log(JSON.stringify(enginerecipeData.generated_keys[0]));
-             var resObj = { "status": "200", "data": { "message": "Your enginerecipe has been submitted and the enginerecipe id is -> "+ enginerecipeData.generated_keys[0] } }
-                    cb(null,resObj);
-                }).catch(function (err) {
-                    console.log("first err catch")
-                    log.error("TraceId : %s, Error : %s", traceId, JSON.stringify(err));
-                    
-                    cb(response);
-                });  
+  
         }
 
 // update enginerecipe for owner
@@ -89,7 +95,7 @@ enginerecipe.prototype.updateEnginerecipeById =(traceId, enginerecipeId , cb) =>
     enginerecipe.prototype.data['updatedDTS'] = moment.utc().format();
     var enginerecipeMetadata = new EnginerecipeMetadata(enginerecipe.prototype.data).getData();
    
-     rdb.table("cfp_enginerecipe_tb").get(enginerecipeId).update(enginerecipeMetadata).run().then(function(enginerecipeData) {
+     rdb.table("cfp_recipe_engine_tb").get(enginerecipeId).update(enginerecipeMetadata).run().then(function(enginerecipeData) {
              var resObj = { "status": "200", "data": { "message": "EnginerecipeID : "+enginerecipeId+ " Enginerecipe info is updated"} }
                     cb(null,resObj);
          
@@ -109,7 +115,7 @@ enginerecipe.prototype.deleteEnginerecipe= ( traceId,enginerecipeId, cb) => {
         statusCode: 404,
         errorCode: "code1"
     }
-    rdb.table("cfp_enginerecipe_tb").get(enginerecipeId).delete().run().then(function (result) {
+    rdb.table("cfp_recipe_engine_tb").get(enginerecipeId).delete().run().then(function (result) {
         cb(null, result);
     }).catch(function (err) {
         log.error("TraceId : %s, Error : %s", "traceId", JSON.stringify(err));
@@ -128,8 +134,8 @@ enginerecipe.prototype.findAllEnginerecipes = (traceId,cb) => {
    // var startfrom=startfrom?startfrom:0s
 
         
-        rdb.table("cfp_enginerecipe_tb").run().then(function (result) {
-            rdb.table("cfp_enginerecipe_tb").count().run().then(function (result2) {
+        rdb.table("cfp_recipe_engine_tb").run().then(function (result) {
+            rdb.table("cfp_recipe_engine_tb").count().run().then(function (result2) {
             if (result.length > 0) {
                                     var resObj = { "status": "200", "data": result,"count":result2}
                                     cb(null, resObj);
@@ -157,7 +163,7 @@ enginerecipe.prototype.findAllEnginerecipes = (traceId,cb) => {
 
 // get enginerecipe 
 enginerecipe.prototype.getOneEnginerecipe= (traceId,enginerecipeId, cb) => {
-    rdb.table("cfp_enginerecipe_tb").get(enginerecipeId).run().then(function (result) {
+    rdb.table("cfp_recipe_engine_tb").get(enginerecipeId).run().then(function (result) {
 
         if (result.length > 0) {
                         var resObj = { "status": "200", "data": result }
@@ -185,8 +191,8 @@ enginerecipe.prototype.findAllEnginerecipesWithStatus = (traceId,status,cb) => {
    // var startfrom=startfrom?startfrom:0s
 
         
-        rdb.table("cfp_enginerecipe_tb").filter({"mealStatus":status}).run().then(function (result) {
-            rdb.table("cfp_enginerecipe_tb").filter({"mealStatus":status}).count().run().then(function (result2) {
+        rdb.table("cfp_recipe_engine_tb").filter({"mealStatus":status}).run().then(function (result) {
+            rdb.table("cfp_recipe_engine_tb").filter({"mealStatus":status}).count().run().then(function (result2) {
             if (result.length > 0) {
                                     var resObj = { "status": "200", "data": result,"count":result2}
                                     cb(null, resObj);
@@ -230,7 +236,7 @@ enginerecipe.prototype.searchEnginerecipe=(traceId, cb) => {
         errorCode: "code1"
     }
     if(!enginerecipeMetadata.all){
-     rdb.table("cfp_enginerecipe_tb").filter(enginerecipeMetadata).run().then(function (enginerecipeData) {
+     rdb.table("cfp_recipe_engine_tb").filter(enginerecipeMetadata).run().then(function (enginerecipeData) {
          console.log(JSON.stringify(enginerecipeData));
              var resObj = { "status": "200", "data": enginerecipeData }
                     cb(null,resObj);
@@ -241,7 +247,7 @@ enginerecipe.prototype.searchEnginerecipe=(traceId, cb) => {
                     cb(response);
                 });  
         }else{
-            rdb.table("cfp_enginerecipe_tb").run().then(function (enginerecipeData) {
+            rdb.table("cfp_recipe_engine_tb").run().then(function (enginerecipeData) {
                 console.log(JSON.stringify(enginerecipeData));
                     var resObj = { "status": "200", "data": enginerecipeData }
                            cb(null,resObj);
@@ -271,7 +277,7 @@ enginerecipe.prototype.getAllWithenginerecipeCodes=(traceId, cb) => {
         errorCode: "code1"
     }
    
-            rdb.table("cfp_enginerecipe_tb").getAll.apply(rdb.table("cfp_enginerecipe_tb"),enginerecipeMetadata.ids).run().then(function (enginerecipeData) {
+            rdb.table("cfp_recipe_engine_tb").getAll.apply(rdb.table("cfp_recipe_engine_tb"),enginerecipeMetadata.ids).run().then(function (enginerecipeData) {
                 console.log(JSON.stringify(enginerecipeData));
                     var resObj = { "status": "200", "data": enginerecipeData }
                            cb(null,resObj);
